# fillright

./: .env.example  .gitignore  README.md
api/: pyproject.toml
api/app/: main.py
api/app/core/: auth.py  config.py  security.py
api/app/db/: postgrest.py  session.py  storage.py
api/app/routers/: answers.py  applications.py  profile.py  qa.py  resumes.py
api/app/schemas/: answers.py  applications.py  jd_analysis.py  profile.py  qa.py  resume.py  tailored_resume.py
api/app/services/: cover_letter.py  pdf_render.py  qa_resolver.py  resume_format.py  resume_parser.py  resume_tailor.py
api/app/services/llm/: base.py  client.py  pricing.py  registry.py
api/app/services/llm/adapters/: gemini_adapter.py  openai_adapter.py
api/app/templates/: cover_letter.html  resume.html
api/scripts/: auth_smoke_check.py  common_answers_smoke_check.py  cover_letter_smoke_check.py  history_and_file_attach_smoke_check.py  jd_analysis_smoke_check.py  llm_smoke_check.py  qa_answer_management_smoke_check.py  qa_resolver_smoke_check.py  resume_review_smoke_check.py  resume_tailor_smoke_check.py  resume_upload_smoke_check.py  web_auth_smoke_check.py  workday_credentials_smoke_check.py  workday_e2e_smoke_check.py
extension/: manifest.json  package-lock.json  package.json  tsconfig.json
supabase/: apply_migrations.py  rls_cross_user_test.py  seed.sql  verify_schema.py
supabase/migrations/: 0001_init_schema.sql  0002_rls_policies.sql  0003_grants.sql  0004_storage_bucket.sql  0005_answer_bank_match_fn.sql  0006_workday_credentials.sql  (+1 more)
web/: package-lock.json  package.json
(+65 files in other folders)
