[project]
name = "fillright-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "openai>=1.50",
    "google-genai>=0.3",
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false
